# energies

./: README.md  main.py  pyproject.toml  run_llama.py
src/energies/: attention_explained.py  attn.py  causal_attention.py  embed.py  llama.py  llama_cfg.json  mlp.py  sdpa.py  transformer.py  transformer_block.py
src/energies/llama/: __init__.py  attention.py  config.py  embeddings.py  layers.py  mlp.py  model.py
