[project]
name = "energies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.7.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.ruff.lint]
select = ["I", "F401", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
